chore: update rest-api
